async await done

--- a/async.html
+++ b/async.html
@@ -12,6 +12,7 @@
     </ul>
 
     <script>
+        /**--------------- how to use async in function -------------*/
         // async function add(a,b){
         //     return a + b;
         // }
@@ -19,6 +20,8 @@
         // const result = add(4,5);
         // // console.log(result);
         // result.then(res => console.log(res));
+
+
 
         /**--------------async await json system----------------*/
         async function loadData(){
